@@ -32,8 +32,8 @@ Grey cloak		285/0		Oblivious
 Green cloak		285/1		Oblivious
 Brown (fur?) cloak	285/2		Adam
 Green top		249/0		sbx
-Brown/orange dress	249/1		-
-Blue dress		249/2		-
+Brown/orange dress	249/1		sbx
+Blue dress		249/2		sbx
 Dark-brown hood		444/0		-
 Light-brown hood	444/1		-
 Caddellite helmet	638/0		Willem Jan
